# xortool

./: pyproject.toml
